# ejabberd-contrib

./: .editorconfig  .gitignore  README-broken.md  README.md  README.txt  extract-mod-translations.sh  mod_cobrowser
atom_pubsub/: Emakefile  README  README.txt  atom_pubsub.spec.broken
bfile/: LICENCE  Makefile  README  vsn.mk
bfile/config/: Makefile  acconfig.h  aclocal.m4  config.h.in  configure.in  include.mk.in
ejabberd-dev/: README.txt
ejabberdPrefs/: Info.plist  LICENSE  config.txt  ejabberd.plist  ejabberdController.h  ejabberdController.m  ejabberdPref.h  ejabberdPref.m  ejabberdPref.tiff  ejabberd_Prefix.pch
ejabberd_auth_http/: Emakefile  README.md  build.bat  ejabberd_auth_http.spec  rebar.config
ejabberd_observer_cli/: README.md  ejabberd_observer_cli.spec  rebar.config
ejabberd_xmlrpc/: ChangeLog  Emakefile  README.txt
extra/: ejabberd_trace.spec  mod_http_offline.spec  mod_mam.spec  mod_prometheus.spec  mod_restful.spec
ircd/: Emakefile  README.txt  build.sh  ircd.spec.broken
jorge/: README  calendar_view.php  chat_map.php  class.db.php  class.ejabberd_xmlrpc.php  class.helper.php  class.roster.php  class.sessions.php  config.php.inc  contacts.php  export.php  favorites.php  footer.php  func.php  headers.php  help.php  index.php  jquery.autocomplete.css  logger.php  main.php  my_links.php  not_enabled.php  search_v2.php  settings.php  simpletree.css  stats.php  style.css  trash.php  upper.php
mod_admin_extra/: ChangeLog  Emakefile  README.txt  build.bat  mod_admin_extra.spec
mod_archive/: Emakefile  README.txt  mod_archive.spec
mod_autoreload/: COPYING  README.md  mod_autoreload.spec
mod_captcha_rust/: README.md  mod_captcha_rust.spec
mod_cobrowser/: ChangeLog  README.md
mod_cron/: ChangeLog  Emakefile  README.md  README.txt  mod_cron.spec
mod_ctlextra/: ChangeLog  Emakefile  README.txt
mod_default_contacts/: README.md  README.txt  mod_default_contacts.spec
mod_default_rooms/: README.md  README.txt  mod_default_rooms.spec
mod_deny_omemo/: README.md  README.txt  mod_deny_omemo.spec
mod_ecaptcha/: README.md  mod_ecaptcha.spec  rebar.config
mod_example/: README.md  mod_example.spec  rebar.config
mod_filter/: README.md  README.txt  mod_filter.spec
mod_grafite/: README.md  mod_grafite.erl  mod_grafite.spec
mod_http_redirect/: README.md  mod_http_redirect.spec
mod_irc/: Emakefile  (+3 more)
(+340 files in other folders)
